@@ -24,9 +24,10 @@ map:
                 example: true
             files_cache:
                 type: scalar
-                desc: Mode in which to operate the files cache. See
-                      https://borgbackup.readthedocs.io/en/stable/usage/create.html#description for
-                      details.
+                desc: |
+                    Mode in which to operate the files cache. See
+                    https://borgbackup.readthedocs.io/en/stable/usage/create.html#description for
+                    details.
                 example: ctime,size,inode
             remote_path:
                 type: scalar
@@ -91,6 +92,10 @@ map:
                     https://borgbackup.readthedocs.org/en/stable/usage.html#borg-create for details.
                     Defaults to no compression.
                 example: lz4
+            remote_rate_limit:
+                type: int
+                desc: Remote network upload rate limit in kiBytes/second.
+                example: 100
             umask:
                 type: scalar
                 desc: Umask to be used for borg create.
